--- a/src/app/components/menuListas/menuListas.html
+++ b/src/app/components/menuListas/menuListas.html
@@ -2,7 +2,7 @@
   <div flex="100" flex-md="90" flex-offset-md="5" flex-sm="90" flex-offset-sm="5" flex-xs="90" flex-offset-xs="5" class="mar">
     <div layout-padding flex layout="column">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
-        <div layout="row" layout-sm="column" layout-xs="column">
+        <div layout="column" layout-sm="column" layout-xs="column">
 
           <div layout-md="column" layout-lg="row">
             <div flex>
@@ -10,33 +10,48 @@
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Buscar Clientes</span>
+                      <span class="md-headline">Buscar</span>
+                      <span class="md-headline">Clientes</span>
                     </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/searchuser.png"></img></center>
+                      </div>
+                    </md-card-title-media>
                   </md-card-title>
                 </md-card>
               </md-button>
             </div> 
-            <div flex>
-              <md-button ui-sref="medidores">
-                <md-card>
-                  <md-card-title>
-                    <md-card-title-text>
-                      <span class="md-headline">Buscar Medidor</span>
-                    </md-card-title-text>
-                  </md-card-title>
-                </md-card>
-              </md-button>
-            </div> 
-          </div>
-          
-          <div layout-md="column" layout-lg="row">
             <div flex>
               <md-button ui-sref="viviendas">
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Buscar Vivienda</span>
+                      <span class="md-headline">Buscar</span>
+                      <span class="md-headline">Vivienda</span>
                     </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/searchhouse.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+            <div flex>
+              <md-button ui-sref="medidores">
+                <md-card>
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Buscar</span>
+                      <span class="md-headline">Medidor</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/searchmedidor.png"></img></center>
+                      </div>
+                    </md-card-title-media>
                   </md-card-title>
                 </md-card>
               </md-button>
@@ -49,8 +64,48 @@
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Buscar Lectura <br>Mensual</span>
+                      <span class="md-headline">Lectura</span>
+                      <span class="md-headline">Mensual</span>
                     </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/ticket.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div> 
+            <div flex>
+              <md-button ui-sref="boletasAbonadas">
+                <md-card>
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Boletas</span>
+                      <span class="md-headline">Abonadas</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/invoice.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+            <div flex>
+              <md-button ui-sref="#">
+                <md-card>
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Tarjeta</span>
+                      <span class="md-headline">Nueva</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/ticket.png"></img></center>
+                      </div>
+                    </md-card-title-media>
                   </md-card-title>
                 </md-card>
               </md-button>
