--- a/src/app/components/menuRegistros/menuRegistros.html
+++ b/src/app/components/menuRegistros/menuRegistros.html
@@ -10,8 +10,31 @@
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro Clientes</span>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Clientes</span>
                     </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/user1.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+            <div flex>
+              <md-button ui-sref="registroVivienda">
+                <md-card>
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Vivienda</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/house.png"></img></center>
+                      </div>
+                    </md-card-title-media>
                   </md-card-title>
                 </md-card>
               </md-button>
@@ -21,8 +44,14 @@
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro Medidor</span>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Medidor</span>
                     </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/medidor.svg"></img></center>
+                      </div>
+                    </md-card-title-media>
                   </md-card-title>
                 </md-card>
               </md-button>
@@ -31,54 +60,57 @@
           
           <div layout-md="column" layout-lg="row">
             <div flex>
-              <md-button ui-sref="registroPagos">
-                <md-card>
-                  <md-card-title>
-                    <md-card-title-text>
-                      <span class="md-headline">Registro Pagos</span>
-                    </md-card-title-text>
-                  </md-card-title>
-                </md-card>
-              </md-button>
-            </div> 
-            <div flex>
               <md-button ui-sref="registroMensual">
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Registro Mensual</span>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Mensual</span>
                     </md-card-title-text>
-                  </md-card-title>
-                </md-card>
-              </md-button>
-            </div> 
-          </div>
-
-          <div layout-md="column" layout-lg="row">
-            <div flex>
-              <md-button ui-sref="registroVivienda">
-                <md-card>
-                  <md-card-title>
-                    <md-card-title-text>
-                      <span class="md-headline">Registro Vivienda</span>
-                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/calendar.png"></img></center>
+                      </div>
+                    </md-card-title-media>
                   </md-card-title>
                 </md-card>
               </md-button>
             </div> 
             <div flex>
-              <md-button ui-sref="#">
+              <md-button ui-sref="registroPagos">
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Nueva Tarjeta</span>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Pagos</span>
                     </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/pago1.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+            <div flex>
+              <md-button ui-sref="abonoBoleta">
+                <md-card>
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Abono</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/payment.png"></img></center>
+                      </div>
+                    </md-card-title-media>
                   </md-card-title>
                 </md-card>
               </md-button>
             </div> 
           </div>
-
         </div>
 
       </div>  
