--- a/src/app/components/registro/registro.html
+++ b/src/app/components/registro/registro.html
@@ -3,66 +3,64 @@
     <div layout-padding flex layout="column">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <div>
-          <h2>Registro Clientes</h2>
+          <h2>Registro de Clientes</h2><br>
         </div>
       </div>
-      <div layout-xs="column">
-        <div flex>
-          <md-input-container class="md-icon-float md-block">
-            <label>RUT</label>
-            <md-icon md-svg-src="/assets/img/usuario.svg" class="name"></md-icon>
-            <input ng-model="vm.cliente.rut_cliente" type="">
-          </md-input-container>
-        </div>
-      </div>
-      <div layout-xs="column">
-        <div flex>
-          <md-input-container md-no-float class="md-block">
-            <label>Nombre Social</label>
-            <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-            <input ng-model="vm.cliente.nombre" type="text">
-          </md-input-container>
-        </div>
-      </div>
-      <div layout-xs="column">
-        <div>
-          <div layout="row" layout-xs="column">
-            <div flex>
-              <md-input-container md-no-float class="md-block">
-                <label>Apellido Paterno</label>
-                <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-                <input ng-model="vm.cliente.apellido_pater" type="text">
-              </md-input-container>
-            </div>
-            <div flex>
-              <md-input-container md-no-float class="md-block">
-                <label>Apellido Materno</label>
-                <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-                <input ng-model="vm.cliente.apellido_mater" type="text">
-              </md-input-container>
-            </div>
+      <div layout-xs="column" class="datos">
+        <div layout="row" layout-xs="column">
+          <div flex>
+            <md-input-container class="md-icon-float md-block">
+              <label>RUT</label>
+              <md-icon md-svg-src="/assets/img/usuario.svg" class="name"></md-icon>
+              <input ng-model="vm.cliente.rut_cliente" type="">
+            </md-input-container>
+          </div>
+          <div flex>
+            <md-input-container md-no-float class="md-block">
+              <label>Nombre Social</label>
+              <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
+              <input ng-model="vm.cliente.nombre" type="text">
+            </md-input-container>
           </div>
         </div>
       </div>
-      <div layout-xs="column">
-        <div flex>
-          <md-input-container md-no-float class="md-block">
-            <label>Telefono</label>
-            <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-            <input ng-model="vm.cliente.telefono" type="text">
-          </md-input-container>
+      <div layout-xs="column" class="datos">
+        <div layout="row" layout-xs="column">
+          <div flex>
+            <md-input-container md-no-float class="md-block">
+              <label>Apellido Paterno</label>
+              <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
+              <input ng-model="vm.cliente.apellido_pater" type="text">
+            </md-input-container>
+          </div>
+          <div flex>
+            <md-input-container md-no-float class="md-block">
+              <label>Apellido Materno</label>
+              <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
+              <input ng-model="vm.cliente.apellido_mater" type="text">
+            </md-input-container>
+          </div>
         </div>
       </div>
-      <div layout-xs="column">
-        <div flex>
-          <md-input-container md-no-float class="md-block">
-            <label>Email</label>
-            <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-            <input ng-model="vm.cliente.email" type="text">
-          </md-input-container>
+      <div layout-xs="column" class="datos">
+        <div layout="row" layout-xs="column">
+          <div flex>
+            <md-input-container md-no-float class="md-block">
+              <label>Telefono</label>
+              <md-icon md-svg-src="/assets/img/telefono.svg"></md-icon>
+              <input ng-model="vm.cliente.telefono" type="text">
+            </md-input-container>
+          </div>
+          <div flex>
+            <md-input-container md-no-float class="md-block">
+              <label>Email</label>
+              <md-icon md-svg-src="/assets/img/correo.svg"></md-icon>
+              <input ng-model="vm.cliente.email" type="text">
+            </md-input-container>
+          </div>
         </div>
       </div>
-      <div layout-xs="column">
+      <div layout-xs="column" class="datos">
         <div flex>
           <md-input-container md-no-float class="md-block">
             <label>Residencia</label>
@@ -71,8 +69,8 @@
           </md-input-container>
         </div>
       </div>
-      <div layout="row" layout-align="center center" flex layout-xs="column">
-        <md-button class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearcliente(vm.cliente)">Registrarme</md-button>
+      <div layout="row" layout-align="center center" flex layout-xs="column" class="datos">
+        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearcliente(vm.cliente)">Registrar Cliente</md-button>
       </div>
       <div layout-xs="column" layout-padding>
         <md-checkbox name="tos" ng-model="button" required>
