--- a/src/app/components/lecturaMensual/lecturaMensual.html
+++ b/src/app/components/lecturaMensual/lecturaMensual.html
@@ -1,63 +1,56 @@
 <div layout-padding>
-  <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
-    <div flex flex-xs="90" flex-offset-xs="5">
-      <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center">
-        <h2>Buscar Lectura Mensual</h2>
-        <h4>INGRESE CÓDIGO DE LA VIVIENDA</h4>
-      </div>  
-      <div flex layout="row">
-        <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
-          <md-input-container>
-            <input ng-model="vm.datolectura" type="number" placeholder="Buscar...">
-          <md-input-container>
-        </div> 
-        <div flex=10 flex-xs="20">
-            <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red-800'}" ng-click="vm.busqueda(vm.datolectura)">
-                <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
-            </md-button>
+  <div class="fond mar">
+    <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
+      <div flex flex-xs="90" flex-offset-xs="5">
+        <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
+          <h2>Buscar Lectura Mensual</h2>
+          <h4>INGRESE CÓDIGO DE LA VIVIENDA</h4>
+        </div>  
+        <div flex layout="row">
+          <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
+            <md-input-container>
+              <input ng-model="vm.datolectura" type="number" placeholder="Buscar...">
+            <md-input-container>
+          </div> 
+          <div flex=10 flex-xs="20">
+              <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datolectura)">
+                  <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
+              </md-button>
+          </div>
         </div>
       </div>
     </div>
+    <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
+      <md-table-container>
+        <table md-table md-row-select multiple md-progress="promise">
+          <thead md-head md-order="query.order" md-on-reorder="getDesserts">
+            <tr md-row>
+              <th md-column md-numeric>Código</th>
+              <th md-column md-numeric>Fecha Registro</th>
+              <th md-column md-numeric>Lectura/Lec. Ant.</th>
+              <th md-column md-numeric>Saldo Pagado</th>
+              <th md-column md-numeric>Consumo</th>
+              <th md-column md-numeric>Valor a Pagar</th>
+              <th md-column md-numeric>Vivienda</th>
+              <th md-column md-numeric>Acción</th>
+            </tr>
+          </thead>
+          <tbody md-body>
+            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="lectura in vm.lecturaMensual">
+              <td md-cell>{{ lectura.id }}</td>
+              <td md-cell>{{ lectura.fecha_registro_consumo }}</td>
+              <td md-cell>{{ lectura.lectura + ' | ' + lectura.lectura_anterior}}</td>
+              <td md-cell>{{ lectura.saldo_pagado }}</td>
+              <td md-cell>{{ lectura.consumo }}</td>
+              <td md-cell>{{ lectura.valor_pagar }}</td>
+              <td md-cell>{{ lectura.vivienda.direccion }}</td>
+              <td md-cell><md-button class="btn1" layout-fill>Modificar</md-button></td>
+            </tr>
+          </tbody>
+        </table>
+      </md-table-container>
+      <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
+    </div>
   </div>
-  <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond">
-    <md-table-container>
-      <table md-table md-row-select multiple md-progress="promise">
-        <thead md-head md-order="query.order" md-on-reorder="getDesserts">
-          <tr md-row>
-            <th md-column md-order-by="nameToLower"><span>Codigo</span></th>
-            <th md-column md-numeric md-order-by="calories.value"><span>Año</span></th>
-            <th md-column md-numeric>Fecha Registro</th>
-            <th md-column md-numeric>Lectura</th>
-            <th md-column md-numeric>Saldo Pagado</th>
-            <th md-column md-numeric>Consumo</th>
-            <th md-column md-numeric>Valor a Pagar</th>
-            <th md-column md-numeric>Lectura Anterior</th>
-            <th md-column md-numeric>Cargo Fijo</th>
-            <th md-column md-numeric>Alcantarillado</th>
-            <th md-column md-numeric>Vivienda</th>
-            <th md-column md-numeric>Mes</th>
-            <th md-column md-numeric>Acción</th>
-          </tr>
-        </thead>
-        <tbody md-body>
-          <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="lectura in vm.lecturaMensual">
-            <td md-cell>{{ lectura.id }}</td>
-            <td md-cell>{{ lectura.year }}</td>
-            <td md-cell>{{ lectura.fecha_registro_consumo }}</td>
-            <td md-cell>{{ lectura.lectura }}</td>
-            <td md-cell>{{ lectura.saldo_pagado }}</td>
-            <td md-cell>{{ lectura.consumo }}</td>
-            <td md-cell>{{ lectura.valor_pagar }}</td>
-            <td md-cell>{{ lectura.lectura_anterior }}</td>
-            <td md-cell>{{ lectura.cargo_fijo }}</td>
-            <td md-cell>{{ lectura.alcantarillado }}</td>
-            <td md-cell>{{ lectura.vivienda.direccion }}</td>
-            <td md-cell>{{ lectura.mes.des_mes }}</td>
-            <td md-cell><md-button md-colors="{background: 'LightBlue-900'}" layout-fill>Modificar</md-button></td>
-          </tr>
-        </tbody>
-      </table>
-    </md-table-container>
-    <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
-  </div>
+  
 </div>
