--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -3,14 +3,14 @@
     <div layout-padding>
       <div layout-xs="column" layout="row" layout-align="center center">
         <div>
-          <h2>Inicia Sesion</h2>
+          <h2>Inicia Sesión</h2>
           <img ng-src="/assets/img/user.png" class="md-card-image" alt="Washed Out">
         </div>
       </div>
       <div layout-xs="column">
         <div flex>
           <md-input-container class="md-icon-float md-block">
-            <label>Usuario</label>
+            <label >Usuario</label>
             <md-icon md-svg-src="/assets/img/usuario.svg" class="name"></md-icon>
             <input ng-model="vm.credentials.nombre_usu" type="text">
           </md-input-container>
@@ -24,7 +24,7 @@
       </div>
       <div flex layout-xs="column">
         <center>
-          <md-button class="md-raised" md-colors="{background: 'LightBlue-900'}" ng-click="vm.login(vm.credentials)" layout-fill style="min-height: 50px;">Ingresar</md-button>
+          <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" ng-click="vm.login(vm.credentials)" layout-fill style="min-height: 50px;">Ingresar</md-button>
         </center>
       </div>
       <div layout-xs="column" layout-padding>
