--- a/src/app/components/tabla/tabla.html
+++ b/src/app/components/tabla/tabla.html
@@ -1,57 +1,58 @@
 <div layout-padding>
-  <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
-    <div flex flex-xs="90" flex-offset-xs="5">
-      <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center">
-        <center>
-          <h2>Buscar Cliente</h2>
-          <h4>INGRESE NOMBRE DEL CLIENTE</h4>
-        </center>
-      </div>  
-      <div flex layout="row">
-        <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
-          <md-input-container>
-            <input ng-model="vm.datocliente" type="text" placeholder="Buscar...">
-          <md-input-container>
-        </div> 
-        <div flex=10 flex-xs="20">
-            <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'Red-800'}" ng-click="vm.busqueda(vm.datocliente)">
-                <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
-            </md-button>
+  <div class="fond mar">
+    <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
+      <div flex flex-xs="90" flex-offset-xs="5">
+        <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
+          <center>
+            <h2>Buscar Cliente</h2>
+            <h4>INGRESE NOMBRE DEL CLIENTE</h4>
+          </center>
+        </div>  
+        <div flex layout="row">
+          <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
+            <md-input-container>
+              <input ng-model="vm.datocliente" type="text" placeholder="Buscar...">
+            <md-input-container>
+          </div> 
+          <div flex=10 flex-xs="20">
+              <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datocliente)">
+                  <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
+              </md-button>
+          </div>
         </div>
       </div>
     </div>
+    <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
+      <md-table-container>
+        <table md-table md-row-select multiple md-progress="promise">
+          <thead md-head md-order="query.order" md-on-reorder="getDesserts">
+            <tr md-row>
+              <th md-column md-numeric>ID</th>
+              <th md-column md-numeric>RUT</th>
+              <th md-column md-numeric>Nombre</th>
+              <th md-column md-numeric>Apellidos</th>
+              <th md-column md-numeric>Telefono</th>
+              <th md-column md-numeric>Email</th>
+              <th md-column md-numeric>Residencia</th>
+              <th md-column md-numeric></th>
+            </tr>
+          </thead>
+          <tbody md-body>
+            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="client in vm.cliente">
+              <td md-cell>{{ client.id }}</td>
+              <td md-cell>{{ client.rut_cliente }}</td>
+              <td md-cell>{{ client.nombre }}</td>
+              <td md-cell>{{ client.apellido_pater + ' ' + client.apellido_mater }}</td>
+              <td md-cell>{{ client.telefono }}</td>
+              <td md-cell>{{ client.email }}</td>
+              <td md-cell>{{ client.residencia }}</td>
+              <th md-cell><md-button class="btn1" ui-sref="cliente">Ver Cliente</md-button></th>
+            </tr>
+          </tbody>
+        </table>
+      </md-table-container>
+      <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
+    </div>
   </div>
-  <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond">
-    <md-table-container>
-      <table md-table md-row-select multiple md-progress="promise">
-        <thead md-head md-order="query.order" md-on-reorder="getDesserts">
-          <tr md-row>
-            <th md-column md-numeric>ID</th>
-            <th md-column md-order-by="nameToLower"><span>RUT</span></th>
-            <th md-column md-numeric md-order-by="calories.value"><span>Nombre</span></th>
-            <th md-column md-numeric>Apellido P</th>
-            <th md-column md-numeric>Apellido M</th>
-            <th md-column md-numeric>Telefono</th>
-            <th md-column md-numeric>Email</th>
-            <th md-column md-numeric>Residencia</th>
-            <th md-column md-numeric></th>
-          </tr>
-        </thead>
-        <tbody md-body>
-          <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="client in vm.cliente">
-            <td md-cell>{{ client.id }}</td>
-            <td md-cell>{{ client.rut_cliente }}</td>
-            <td md-cell>{{ client.nombre }}</td>
-            <td md-cell>{{ client.apellido_pater }}</td>
-            <td md-cell>{{ client.apellido_mater }}</td>
-            <td md-cell>{{ client.telefono }}</td>
-            <td md-cell>{{ client.email }}</td>
-            <td md-cell>{{ client.residencia }}</td>
-            <th md-cell><md-button class="md-raised md-primary" ui-sref="cliente">Ver Cliente</md-button></th>
-          </tr>
-        </tbody>
-      </table>
-    </md-table-container>
-    <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
-  </div>
+  
 </div>
