--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-html, body, #root {
+html, body, ui-view,#root {
   margin: 0;
   height: 100%;
-  font-family: 'Open Sans', sans-serif;
-  background-color: #3E3E3E;
+  font-family: 'Bree Serif';
+  /*font-family: 'Open Sans', sans-serif;*/
+  background-color: #83CEF6;
 }
 
 body, h1, h2, h3 {
-  font-weight: 300
+  font-weight: 300;
 }
 
 .fond {
@@ -22,7 +23,7 @@ body, h1, h2, h3 {
 
 .ima {
   margin-left: 1%;
-  margin-right: 1%;
+  margin-right: 10px;
 }
 
 .some-pdf-container { 
@@ -30,8 +31,8 @@ body, h1, h2, h3 {
 } 
 
 .imag {
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   border-top-left-radius: 50% 50%;
   border-top-right-radius: 50% 50%;
   border-bottom-right-radius: 50% 50%;
@@ -41,6 +42,7 @@ body, h1, h2, h3 {
 
 .texto {
   text-align: left;
+  font-size: 16px;
 }
 
 .bor {
@@ -62,6 +64,10 @@ body, h1, h2, h3 {
 md-icon.tama {
   width: 12px;
   height: 12px;
+}
+
+md-icon {
+  margin-right: 10px;
 }
 
 .tabla:hover {
@@ -89,5 +95,65 @@ md-sidenav{
 md-card{
   width: 260px;
   height: 120px;
-  background: linear-gradient(to left, #518092 , #1B4E62);
+  border-radius: 15px;
+  border: 1px solid grey;
+  background-color: #FFDBAB;
+  /*background-color: #FEA44B;*/
+  /*background: linear-gradient(to left, #015167, #026986, #06A6D3, #039BE5);*/
+}
+
+.info {
+  margin-right: 20px;
+  margin-bottom: 4px;
+  margin-top: 0px;
+  text-align: right;
+  padding-bottom: 20px;
+}
+
+.admin {
+  margin-bottom: 5px;
+}
+
+.separar {
+  border-top: 1px solid #ccc; 
+  margin-top: 20px;
+}
+
+.md-headline {
+  font-size: 25px;
+  text-transform: capitalize;
+}
+
+.datos {
+  margin-top: -30px;
+}
+
+#registro {
+  border-radius: 13px;
+  font-size: 15px;
+}
+
+.btn1 {
+  background-color: rgba(107, 103, 91, 0.96);
+  color: white;
+  border-radius: 10px 0 0 10px;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.btn2 {
+  background-color: rgba(107, 103, 91, 0.96);
+  color: white;
+  border-radius: 0 10px 10px 0;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.sesion {
+  font-size: 15px;
+  text-transform:capitalize;
+}
+
+.icon1 {
+  margin-right: 0px;
 }
